# src/app/user/user.controller.ts
@@ -2,7 +2,7 @@ import {
   Body, Controller, Delete, Get, Post, Put, Query, Route, Security, Tags
 } from 'tsoa'
 import {
-  getAllUserService, createUserService, updateUserService, deleteUserService
+  getAllUserService, createUserService, updateUserService, deleteUserService, changePasswordService
 } from './user.service'
 
 @Tags( 'User Permission' )
@@ -19,6 +19,14 @@ export class UserPermissionController extends Controller {
   @Security( 'api_key', ['create:user'] )
   public async createUser ( @Body() body: { email: string, roles: string[] } ) {
     return await createUserService( { email: body.email, roles: body.roles } )
+  }
+
+  @Put( '/change-password/{id}/' )
+  @Security( 'api_key', ['read:employee'] )
+  public async changePassword ( @Query( 'id' ) id: string, @Body() body: {email: string, password: string} ) {
+    return await changePasswordService( {
+      id: Number( id ), password: body.password, email: body.email
+    } )
   }
 
   @Put( '/update/{id}/' )
